--- a/ContactMe.html
+++ b/ContactMe.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+  <link rel="stylesheet" href="example.css">
 </head>
 
 <body>
   <h3>Contacting</h3>
-  <hr size=2 noshade>
+  <hr>
   <p><b><i>Email:</i></b> Kareem@protonmail.com</p>
   <p><b><i>Phone Number:</i></b> 20127894561</p>
 </body>
