--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en" dir="ltr">
 
 <head>
-
   <meta charset="utf-8">
   <title>Kareem Mohamed</title>
-
+  <link rel="stylesheet" href="example.css">
 </head>
 
-<body style="background-color: #e7f5f2;">
+<body>
 
   <table cellspacing="20">
     <tr>
@@ -22,7 +21,7 @@
     </tr>
   </table>
 
-  <hr size=2 noshade>
+  <hr size=2>
 
 
   <h3>Experience</h3>
@@ -49,14 +48,14 @@
       </tr>
     </tbody>
   </table>
-  <hr size="2" noshade>
+  <hr size="2">
   <h3>hobbies</h3>
   <ul>
     <li>Gaming</li>
     <li>Reading</li>
     <li>Watching TV Series and Movies</li>
   </ul>
-  <hr size="2" noshade>
+  <hr size="2">
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
@@ -72,7 +71,7 @@
       <td>⭐⭐⭐</td>
     </tr>
   </table>
-  <hr size="2" noshade>
+  <hr size="2">
   <a href="ContactMe.html"><b>Contact Me</b></a>
 
 </body>
