--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Kareem Mohamed</title>
-  <link rel="stylesheet" href="example.css">
+  <link rel="stylesheet" href="CSS/Styles.css">
 </head>
 
-<body>
+<body id="Top">
 
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="172757307_6033540143354690_3580743979550039396_n.jpg" alt="Kareem Mohamed's Photo" width="125" height="125">
+        <img src="Images/MyPhoto.jpg" alt="Kareem Mohamed's Photo" title="Kareem Mohamed's Photo" width="125" height="125">
       </td>
       <td>
         <h2>Kareem Mohamed</h2>
@@ -23,8 +23,7 @@
 
   <hr size=2>
 
-
-  <h3>Experience</h3>
+  <h3 id="Middle">Experience</h3>
   <table cellspacing="10">
     <thead>
       <tr>
@@ -72,8 +71,10 @@
     </tr>
   </table>
   <hr size="2">
-  <a href="ContactMe.html"><b>Contact Me</b></a>
-
+  <a href="ContactMe/ContactMe.html"><b>Contact Me</b></a><br>
+  <a href="#Top"><i>Back to top</i></a><br>
+  <a href="#Middle"><i>Back to middle</i></a><br>
+  <!--Comment-->
 </body>
 
 </html>
